<resources>
    <string name="app_name">ShouldIGo</string>
    <string name="title_activity_register_login">RegisterLoginActivity</string>
    <string name="login">Connexion</string>
    <string name="register">Créer un compte</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="API_KEY">AIzaSyA8iJVippbyi6kqBTr1Ubc1QHcsLZ94lug</string>
    <string name="firstname">Nom</string>
    <string name="lastname">Prénom</string>
    <string name="create">Créer</string>
</resources>
